[package]
description = "Parity Runtime"
homepage = "http://parity.io"
license = "GPL-3.0"
name = "parity-runtime"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
futures03 = {package = "futures",  version = "0.3.5", default-features = false, features = ["compat"] }
futures = { package = "futures", version = "0.1" }
tokio-compat = "0.1.6"
tokio = { version = "0.1.22"}
